--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 wikipedia==1.4.0
 Pillow
 google.generativeai
-streamlit==1.10.0
-openai==0.10.2
-langchain-openai==0.1.0  # 가상의 버전, 실제 사용 버전 확인 필요
-langchain-core==0.1.0    # 가상의 버전, 실제 사용 버전 확인 필요
-langchain-community==0.1.0  # 가상의 버전, 실제 사용 버전 확인 필요
-pandas==1.3.3
+streamlit
+openai
+langchain-openai  # 가상의 버전, 실제 사용 버전 확인 필요
+langchain-core    # 가상의 버전, 실제 사용 버전 확인 필요
+langchain-community  # 가상의 버전, 실제 사용 버전 확인 필요
+pandas
